--- a/app/src/main/res/layout/rv_fotografoencontrado.xml
+++ b/app/src/main/res/layout/rv_fotografoencontrado.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Ver Porftfolio"
+        android:text="Ver Portfolio"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar_FotografoEncontradoRV_Estrellas" />
